--- a/services.css
+++ b/services.css
@@ -201,7 +201,7 @@
     
       .nav-links {
         position: absolute;
-        background: #f44336;
+        background: rgba(7, 145, 175, 0.7);
         height: 100vh;
         width: 200px;
         top: 0;
