--- a/servicios.css
+++ b/servicios.css
@@ -202,7 +202,7 @@
   
     .nav-links {
       position: absolute;
-      background: #f44336;
+      background: rgba(7, 145, 175, 0.7);
       height: 100vh;
       width: 200px;
       top: 0;
@@ -411,6 +411,8 @@
       flex-direction: column;
     }
   }
+
+
 
   ul{
     list-style-type:none;
