--- a/services.css
+++ b/services.css
@@ -876,7 +876,7 @@
       margin-bottom:12px;
       font-weight:bold;
       font-size:16px;
-      color: #329db6;
+      color: #ED68A5;
     }
     
     .footer-clean ul {
