--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@
   
   nav img {
     width: 150px;
+    background-image: url(../LKS/assets/LKS\ cuadrado.png);
   }
   
   .nav-links {
@@ -627,7 +628,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 99%;
+    width: 98%;
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(10, 24, 84, 0.7), rgba(255,255,255,0)),
       url(../LKS/assets/dan-dimmock-sNwnjxm8eTY-unsplash.jpg);
     background-position: center;
@@ -739,7 +740,7 @@
     margin-bottom:12px;
     font-weight:bold;
     font-size:16px;
-    color: #329db6;
+    color: #ED68A5;
   }
   
   .footer-clean ul {
