--- a/lessheader.css
+++ b/lessheader.css
@@ -78,6 +78,8 @@
       width: 100%;
     }
     
+    
+
     .logo-link {
       text-decoration: none;
     }
@@ -222,6 +224,49 @@
       .nav-links ul {
         padding: 30px;
       }
+      
+      /* .menu-btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        z-index: 10;
+      } */
+      
+      /* .center {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        position: absolute;
+        width: 50px;
+      }
+      
+      .center:before,
+      .center:after,
+      .center div {
+        background: #fff;
+        content: "";
+        display: block;
+        height: 6px;
+        border-radius: 3px;
+        margin: 7px 0;
+        transition: 0.5s;
+      }
+      .center:hover:before {
+        transform: translateY(12px) rotate(135deg);
+      }
+      .center:hover:after {
+        transform: translateY(-12px) rotate(-135deg);
+      }
+      .center:hover div {
+        transform: scale(0);
+      } */
+      
     }
     
      /*******************course***************************/
