--- a/style.css
+++ b/style.css
@@ -655,11 +655,38 @@
   
   /*********carrusel*****/
 
+  /* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position:static;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
  /* Slideshow container */
 .slider-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content:center;
   align-items: stretch;
     width: 100%;
     color: #fff;
