--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@
   }
 
  .logo-link {
-  min-height: 18vh;
-    width: 15%;
-    background: rgba( 255, 255, 255, 0.1 );
+  min-height: 25vh;
+  width: 15%;
+    background: rgba(255, 255, 255, 0.025);
     background-repeat: no-repeat;
     background-position: center; /*para logo centrado*/
     padding: 20px;
@@ -28,7 +28,7 @@
    display: flex;
     background-size: 100%;
     background-image: url(../LKS/assets/LKS\ cuadrado.png);
-   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+   /* box-shadow: 0 8px 32px 0 rgba(185, 188, 237, 0.37); */
    backdrop-filter: blur( 1.5px );
     -webkit-backdrop-filter: blur( 1.5px );
    border-radius: 10px;
@@ -277,8 +277,8 @@
   
   .course-col {
     position: relative;
-    width: 550px;
-    height: 300px;
+    width: 300px;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -385,20 +385,20 @@
   }
   
   .course-col .content {
-   position: relative;
-   width: 350px;
-   height: 400px;
-   padding: 20px 40px;
-   background: rgba(255, 255, 255, 0.05);
-   backdrop-filter: blur(10px);
-   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-   border-radius: 8px;
-   z-index: 1;
-   transform: 0.5s;
-   color: #fff;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+    position: relative;
+    width: 250px;
+    height: 400px;
+    padding: 20px 40px;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    z-index: 1;
+    transform: 0.5s;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .course-col .content h2 {
@@ -425,13 +425,16 @@
   /*********FORMULARIO*******/
 
   form {
-    background-color: #73a3b3;
+    background-color: rgba(237, 104, 165, 0.2);
     border-radius: 10px;
-    padding: 20px;
-    width: 500px;
-    margin: 50px auto;
+    padding: 15px;
+    width: 400px;
+    margin: 30px auto;
     place-content: center;
- 
+  }
+
+  form label {
+color: #c4d5db;
   }
   
   .lb {
@@ -440,6 +443,7 @@
     font-size: 18px;
     font-weight: bold;
     display: inline-table;
+    
   }
 
   .xb {
@@ -636,8 +640,8 @@
     border-radius: 10px;
     text-align: center;
     padding: 100px 0;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
+    margin-bottom: 10rem;
+    margin-top: 10rem;
     margin: 25px auto;
   }
   
