--- a/detail.css
+++ b/detail.css
@@ -8,7 +8,7 @@
   }
   
   .header {
-    min-height: 55vh;
+    min-height: 90vh;
     width: 100%;
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(10, 24, 84, 0.7)),
       url(../LKS/assets/teamwork-3213924_960_720.jpg);
@@ -269,6 +269,31 @@
       } */
       
     }
+
+    .image {
+      flex: 0 0 40%;
+    }
+    
+    .image img {
+      max-width: 100%;
+      height: auto;
+    }
+    .text {
+      flex: 0 0 50%;
+      margin: 0 20px;
+    }
+    
+    .text h1 {
+      font-size: 24px;
+    }
+    
+    .text p, ul, li {
+      padding:0;
+      list-style:none;
+      line-height:1.6;
+      font-size:14px;
+      margin-bottom:0;
+    }    
     
      /*******************course***************************/
     
