--- a/style.css
+++ b/style.css
@@ -658,11 +658,15 @@ color: #c4d5db;
   }
   
   /*********carrusel*****/
-
-  /* Next & previous buttons */
+  .slideshow-container {
+    max-width:max-content;
+    position: relative;
+    margin: auto;
+  }
+/* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
-  position:static;
+  position: absolute;
   top: 50%;
   width: auto;
   padding: 16px;
@@ -686,6 +690,7 @@ color: #c4d5db;
   background-color: rgba(0,0,0,0.8);
 }
 
+
  /* Slideshow container */
 .slider-container {
   display: flex;
@@ -702,10 +707,44 @@ color: #c4d5db;
  
 }
 
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
 .text {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
+  position: absolute;
   bottom: 8px;
   width: 100%;
   text-align: center;
@@ -716,11 +755,13 @@ color: #c4d5db;
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
+  position: absolute;
   top: 0;
 }
 
 /* The dots/bullets/indicators */
 .dot {
+  cursor: pointer;
   height: 15px;
   width: 15px;
   margin: 0 2px;
@@ -730,7 +771,7 @@ color: #c4d5db;
   transition: background-color 0.6s ease;
 }
 
-.active {
+.active, .dot:hover {
   background-color: #717171;
 }
 
@@ -747,7 +788,7 @@ color: #c4d5db;
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
+  .prev, .next,.text {font-size: 11px}
 }
  
   /***************************footer********************************/
